# zoom-downloader

./: .env.example  .gitignore  LICENSE  README.md  Run Zoom Downloader.bat  Run Zoom Downloader.command  pyproject.toml  zoom-downloader.spec  zoom_recording_downloader.py
.github/workflows/: CICD.yml  build-artifacts.yml
scripts/: refresh_zoom_cookies.py  run_all_checks.py
tests/: README.md  test_paths.py  test_prompts_and_menu.py
tests/e2e/: _helpers.py  test_protected_cookie_b64_e2e.py  test_protected_passcode_refresh_e2e.py  test_public_download_e2e.py
tests/integration/: test_download_fallback.py
tests/unit/: test_collision_and_errors.py  test_prompts_and_menu.py
