[project]
name = "zoom-recorder"
version = "0.1.0"
description = "Simple Zoom recording downloader using yt-dlp."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2025.1.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "playwright>=1.54.0",
    "pyinstaller>=6.19.0",
    "pytest>=8.4.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that require real external resources",
]
